--- a/02_MindGym/style.css
+++ b/02_MindGym/style.css
@@ -19,16 +19,38 @@ body {
 }
 
 .container {
-    background-image: url('/assets/homepage-hero.jpg');
+    /* background-image: url('/assets/homepage-hero.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    overflow: hidden; */
+}
+
+.wrapper { 
+    /* width: 80vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto; */
+    width: 100vw;
+    height: 100vh;
+    position: relative;
     overflow: hidden;
 }
 
-.content { 
-    width: 80vw;
-    height: 100vh;
+.section-wrapper {
+    background: url('/assets/homepage-hero.jpg') center no-repeat;
+    background-size: cover;
+}
+
+.content {
+    /* position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+    max-width: 1280px;
+    min-width: 340px;
+    width: 80%;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -59,6 +81,10 @@ nav .logo {
     display: flex;
 }
 
+.menu-icon {
+    display: none;
+}
+
 ul .menu-item {
     font-size: 1.4rem;
     font-weight: 400;
@@ -74,6 +100,10 @@ a {
 
 /* End of Menu */
 
+.main-content {
+    width: 95rem;
+}
+
 button {
     background: linear-gradient(270deg,#00e200,#87ff64);
     border: none;
@@ -84,6 +114,7 @@ button {
     color: #121212;
     border-radius: 5rem;
     cursor: pointer;
+    margin-right: 2.4rem;
 }
 
 .btn-md {
@@ -94,7 +125,6 @@ button {
     font-size: 1.2rem;
     padding: 12px 16px;
 }
-
 
 .main {
     width: 100%;
@@ -114,11 +144,14 @@ h1 {
 
 /* 48em = 768px */
 
-@media (max-width: 1080px) {
-    .menu-wrapper {
+@media (max-width: 1024px) {
+    .menu {
         display: none;
     }
-
+    .menu-icon {
+        display: block;
+        cursor: pointer;
+    }
     
 }
   
